--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,36 @@
 body {
     font-family: 'roboto', sans-serif;
     color:var(--primary-text-color);
-} 
+}
+h1,h2,h3,h4,h5,h6, p {
+    margin: 0;;
+}
 
+img {
+    display: block;
+}
+
+button {
+    cursor: pointer;
+}
+
+ul {
+    margin: 0;
+    padding-left: 0;
+}
+
+.container {
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 :root{
     --primary-title-color:#2E2F42;
     --secondary-title-color: #fff;
@@ -41,8 +69,17 @@ body {
 /* ------------------------- HEADER ------------------------- */
 
 .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E7E9FC;
+}
+
+.header-container{
+    display: flex;
 }
 .header-navigation {
+    display: flex;
+    margin-right: auto;
 }
 
 .header-logo {
@@ -59,6 +96,9 @@ color: var(--primary-title-color);
     color: var(--accent-color);
 }
 .header-list {
+    display: flex;
+    gap: 40px;
+    margin-left: 76px;
 }
 .header-item {
 }
@@ -79,6 +119,8 @@ color: var(--primary-title-color);
 }
 
 .header-contacts-list {
+    display: flex;
+    gap: 40px;
 }
 
 .header-contacts-item {
@@ -100,7 +142,19 @@ color: var(--primary-title-color);
 /* ------------------------- HERO------------------------- */
 
 .hero {
-    background-color: var(--secondary-background-color)
+    background-color: var(--secondary-background-color);
+    padding-top: 188px;
+    padding-bottom: 292px;
+    margin-bottom: 120px;
+}
+
+.hero-container{
+    display: flex;
+}
+
+.hero-wrapp{
+    margin: 0 auto;
+    width: 500px;
 }
 
 .hero-title {
@@ -109,6 +163,8 @@ color: var(--primary-title-color);
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #FFFFFF;
+    text-align: center;
+    margin-bottom: 48px;
 }
 
 .hero-btn {
@@ -118,8 +174,14 @@ color: var(--primary-title-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.04em;
+    letter-spacing: 0.04em; 
     color: #FFFFFF;
+    border: 1px solid var(--accent-btn-color);
+    padding: 16px 32px;
+    border-radius: 4px;
+
+    display: block;
+    margin: 0 auto;
 }
 
 /* ------------------------- OUR FEATURES ------------------------- */
@@ -128,13 +190,17 @@ color: var(--primary-title-color);
 
 }
 .our-features-title {
+    margin-bottom: 8px;
 }
 .our-features-list {
     padding: 0;
+    display: flex;
+    margin-bottom: 120px;
 }
-.list {
-}
+
 .our-features-item {
+    max-width: 264px;
+    margin-left: 24px;
 }
 .our-features-secondary-title {
     font-weight: 500;
@@ -160,15 +226,25 @@ color: var(--primary-title-color);
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--primary-title-color);
+    margin-bottom: 72px;
+    text-align: center;
 }
 .what-are-we-doing-list {
+    display: flex;
 }
 .what-are-we-doing-item {
+    width: calc((100% - 48px) / 3);
+    margin-bottom: 120px;
 }
 
 /* ------------------------- OUR TEAM ------------------------- */
 .our-team {
-    background-color: #F4F4FD;;
+    background-color: #F4F4FD;
+}
+
+.our-team-wrapp{
+    padding-top: 100px; 
+
 }
 .our-team-title {
     font-weight: 700;
@@ -177,23 +253,39 @@ color: var(--primary-title-color);
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--primary-title-color);
+    text-align: center;
+    margin-bottom: 72px;
 }
 .our-team-list {
+    display: flex;
 }
 .our-team-item {
     background-color: var(--primary-background-color);
+    margin-left: 24px;
+    text-align: center;
+    margin-bottom: 120px;
 }
+.our-team-item:first-child {
+    margin-left: 0;
+}
+
+.out-team-img {
+    margin-bottom: 32px;
+}
+
 .our-team-secondary-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-title-color);
+    margin-bottom: 8px;
 }
 .our-team-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 32px;
 }
 
 /* ------------------------- FOOTER ------------------------- */
@@ -207,26 +299,40 @@ color: var(--primary-title-color);
     line-height: 1.16;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-
 }
 .footer-logo-web { 
     color: #4D5AE5;
 }
 .fooret-logo-studio {
     color: #F4F4FD;
-
+}
+.footer-wrapp{
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .footer-text {
+    max-width: 264px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #E7E9FC;
+    margin-top: 16px;   
 }
 
 /* ------------------------------- PORTFOLIO ------------------------------- */
-.filter {
+.filter-container{  
+}
+
+.filter-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 84px;
 }
 .filter-item {
+    margin-right: 24px;
+}
+.filter-item:last-child{
+    margin-right: 0;
 }
 .filter-btn {
     font-family: 'roboto', sans-serif;
@@ -238,7 +344,8 @@ color: var(--primary-title-color);
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #4D5AE5;
-    cursor: pointer;
+
+    padding: 12px 24px;
 }
 
 .filter-btn:hover,
@@ -247,8 +354,24 @@ color: var(--primary-title-color);
     color: #fff;
 }
 .filter-cards {
+    display: flex;
+    flex-wrap: wrap;
 }
 .filter-cards-item {
+    width: calc((100% - 48px) / 3);
+    border: 1px solid #E7E9FC;
+    margin-right: 24px;
+    margin-bottom: 48px;
+}
+.filter-cards-item:nth-child(3n) {
+    margin-right: 0;
+}
+.filter-cards-item:nth-child(n + 6) {
+    margin-bottom: 0;
+}
+
+.filter-cards-img {
+    margin-bottom: 32px;
 }
 .filter-cards-title {
     font-weight: 500;
@@ -256,9 +379,13 @@ color: var(--primary-title-color);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-title-color);
+    margin-bottom: 8px;
+    margin-left: 16px;
 }
 .filter-cards-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 32px;
+    margin-left: 16px;
 }
