--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,10 @@ color: var(--primary-title-color);
 }
 .what-are-we-doing-item {
     width: calc((100% - 48px) / 3);
-    margin-bottom: 120px;
+    margin-left: 24px;
+}
+.what-are-we-doing-item:first-child {
+    margin-left: 0;
 }
 
 /* ------------------------- OUR TEAM ------------------------- */
