--- a/css/style.css
+++ b/css/style.css
@@ -144,8 +144,7 @@ color: var(--primary-title-color);
 .hero {
     background-color: var(--secondary-background-color);
     padding-top: 188px;
-    padding-bottom: 292px;
-    margin-bottom: 120px;
+    padding-bottom: 188px;
 }
 
 .hero-container{
@@ -187,20 +186,23 @@ color: var(--primary-title-color);
 /* ------------------------- OUR FEATURES ------------------------- */
 
 .our-features {
+    padding-bottom: 0;
 
 }
 .our-features-title {
-    margin-bottom: 8px;
+    
 }
 .our-features-list {
     padding: 0;
     display: flex;
-    margin-bottom: 120px;
 }
 
 .our-features-item {
-    max-width: 264px;
+    width: 264px;
     margin-left: 24px;
+}
+.our-features-item:first-child {
+    margin-left: 0;
 }
 .our-features-secondary-title {
     font-weight: 500;
@@ -208,6 +210,7 @@ color: var(--primary-title-color);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-title-color);
+    margin-bottom: 8px;
 }
 .our-features-text {
     font-size: 16px;
@@ -246,7 +249,6 @@ color: var(--primary-title-color);
 }
 
 .our-team-wrapp{
-    padding-top: 100px; 
 
 }
 .our-team-title {
@@ -266,7 +268,6 @@ color: var(--primary-title-color);
     background-color: var(--primary-background-color);
     margin-left: 24px;
     text-align: center;
-    margin-bottom: 120px;
 }
 .our-team-item:first-child {
     margin-left: 0;
@@ -294,6 +295,8 @@ color: var(--primary-title-color);
 /* ------------------------- FOOTER ------------------------- */
 .footer {
     background-color: var(--secondary-background-color);
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .footer-logo {
     font-family: 'Raleway';
@@ -310,8 +313,7 @@ color: var(--primary-title-color);
     color: #F4F4FD;
 }
 .footer-wrapp{
-    padding-top: 100px;
-    padding-bottom: 100px;
+
 }
 .footer-text {
     max-width: 264px;
@@ -366,6 +368,11 @@ color: var(--primary-title-color);
     margin-right: 24px;
     margin-bottom: 48px;
 }
+
+.filret-card-item-wrap {
+    padding: 32px 16px;
+}
+
 .filter-cards-item:nth-child(3n) {
     margin-right: 0;
 }
@@ -374,7 +381,6 @@ color: var(--primary-title-color);
 }
 
 .filter-cards-img {
-    margin-bottom: 32px;
 }
 .filter-cards-title {
     font-weight: 500;
@@ -382,13 +388,9 @@ color: var(--primary-title-color);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-title-color);
-    margin-bottom: 8px;
-    margin-left: 16px;
 }
 .filter-cards-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-bottom: 32px;
-    margin-left: 16px;
 }
